# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.466 2007-09-13 01:17:56 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --

CVS HEAD (????/??/??)
 - (2007/09/13) Improved report overview of perfornance log.

2.2.3 (2007/09/??)
 - (2007/09/12) Fixed bug# 1203 - Redhat shm workaround should not relate to
    real shm request.
 - (2007/09/07) Fixed bug# 2265 - On IIS6, Package Manager is displaying a
    error after installing a package (header not complete). But package got
    installed corectly.
 - (2007/09/06) Fixed bug# 2261 - False params in call of ServiceLookup() and
    SLALookup() functions.
 - (2007/09/06) Fixed reopened Bug# 2142 - Ticket history entry was wrong if
    service, sla or ticket type was changed.
 - (2007/09/03) Fixed bug# 2193 - Postmaster module
    Kernel::System::PostMaster::Filter::NewTicketReject is not working - need
    Charset!
 - (2007/09/03) Fixed bug# 2245 - Responsible / Owner Field not working for
    all users in the Email-Ticket form.
 - (2007/09/03) Improved system speed of escalation calculation if many open
    ticket (> 2000) are there.
 - (2007/08/28) Fixed Ticket# 2007082842000477 - Problem with different customer
    sources and use CacheTTL option (namespace of cache is not uniq).
 - (2007/08/28) Fixed Ticket# 2007082842000413 - Ticket created over phone
    ticket with state closed is shown in queue view like "My Queues (1)" but
    no ticket is shown if I click on "My Queues (1)" (if
    Kernel::System::Ticket::IndexAccelerator::StaticDB is used as
    Ticket::IndexModule).
 - (2007/08/27) Fixed bug# 2230 - OTRS on IIS - redirect/loop problem after
    login.
 - (2007/08/27) Fixed bug# 2229 - Return value of "ServiceLookup" is used
    without quoting in SQL statements.